# adversarial_purification

./: README.md  model.py  pyproject.toml  test.py
adversarial_purification/: model.py  test.py
adversarial_purification/defenses/conv_filter/: dataset.py  defense.py  fcn.py  model.py  train.py
adversarial_purification/defenses/transforms/: gaussian_blur.py  jpeg.py  random_crop.py  rotate.py  upscale.py
defenses/conv_filter/: dataset.py  defense.py  fcn.py  train.py  unet.py
defenses/reversed_adv_cf/: adv_cf.py  defense.py
defenses/transforms/: flip.py  median_filter.py  random_crop.py  rotate.py  upscale.py
