
[project]
name = "adversarial_purification"
version = "0.1.0"
description = ""
authors = [
    {name = "Anna Chistyakova", email = "a.chistyakova@ispras.ru"},
]

dependencies = [
    "opencv-python>=4.8.1.78",
    "numpy>=1.25.2",
    "Pillow>=10.1.0",
    "scikit-learn>=1.3.2",
    "pandas>=2.1.0",
    "torch==2.0.1+cu118",
    "torchvision==0.15.2+cu118",
    "tqdm>=4.66.1",
    "seaborn>=0.13.0",
    "tensorboard>=2.15.1",
    "albumentations>=1.3.1",
    "pytorch-msssim>=1.0.0",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.277",
    "black>=23.7.0",
]

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.ruff]
line-length = 100

[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/torch/"
name = "torch"

[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/torchvision/"
name = "torchvision"

